<resources>
    <string name="app_name">ClockInOutTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Time Clock</string>
    <string name="nav_header_subtitle">Track the times you\'ve clocked in and out</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_weeklyview">Weekly View</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="last_action">You have yet to do anything</string>
    <string name="clock_in">Clock In</string>
    <string name="lunch_out">Lunch Out</string>
    <string name="lunch_in">Lunch In</string>
    <string name="clock_out">Clock Out</string>
</resources>